# euo

./: .gitignore  README.md  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/client-desktop/: index.html  package.json
apps/client-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-desktop/src-tauri/src/: main.rs
apps/client-desktop/src/game/: PhaserGame.ts
apps/client-desktop/src/network/: api.ts  socket.ts
apps/client-desktop/src/types/: map.ts
apps/client-desktop/src/ui/: App.tsx  styles.css
apps/server/: package.json
apps/server/src/: index.ts
apps/server/src/auth/: adminLog.ts  store.ts
apps/server/src/chat/: commands.ts  rateLimiter.ts
apps/server/src/content/: maps.ts
apps/server/src/game/: combat.ts  party.ts  progression.ts
apps/server/src/persistence/: diagnostics.ts  prisma.ts
apps/server/src/world/: state.ts
assets/manifests/: asset-manifest.schema.json
docs/: asset-replacement.md
prisma/: schema.prisma
scripts/: ci-verify.mjs  generate-asset-manifests.ts  inventory-assets.ts  smoke-check.mjs
